--- a/prepros.config
+++ b/prepros.config
@@ -956,6 +956,12 @@
         }
       },
       {
+        "file": "#source/scss/admin.scss",
+        "config": {
+          "customOutput": "css\\admin.css"
+        }
+      },
+      {
         "file": "#source/scss/index.scss",
         "config": {
           "customOutput": "css\\index.css"
